--- a/smart-calendar/src/app/shared/components/header/header.html
+++ b/smart-calendar/src/app/shared/components/header/header.html
@@ -5,7 +5,7 @@
     </button>
     
     <div class="brand">
-      <i class="fas fa-calendar-alt"></i> <span class="brand-name">AgendaRápido</span>
+      <img src="/assets/images/logo.png" alt="Logo" class="logo-img"> <span class="brand-name">AgendaRápido</span>
     </div>
     
     <div class="header-center">
