--- a/smart-calendar/src/app/shared/components/sidebar/sidebar.html
+++ b/smart-calendar/src/app/shared/components/sidebar/sidebar.html
@@ -2,7 +2,7 @@
   <!-- Header -->
   <div class="sidebar-header">
     <div class="logo" *ngIf="isOpen">
-      <h2><img src="/assets/images/logo.png" alt="Logo" class="logo-img"> AgendaRápido</h2>
+      <h2><img src="/smart-calendar/src/assets/images/Logo_dark.png" alt="Logo" class="logo-img"> AgendaRápido</h2>
     </div>
     <button class="toggle-btn" (click)="onToggleSidebar()" aria-label="Alternar sidebar">
 <i class="fas" [class.fa-chevron-left]="isOpen" [class.fa-chevron-right]="!isOpen"></i>
